# wheatbelt_rainfall_analyser

./: .clauderules  .gitignore  CLAUDE.md  CLEANUP_PLAN.md  LICENSE  M1_DELIVERY_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  README.md  conftest.py  prd.md  pyproject.toml  requirements.txt  setup.py  task_manager.md
archive/: MIGRATION_NOTES.md  task_manager_old.md
config/: assumptions.yaml  crop_calendars.yaml  crop_context.yaml  guide_commodity_map.yaml  silo_sources.yaml  sowing_windows_wa.csv  sowing_windows_wa.provenance.txt
docs/: DPIRD-2026-WA-Crop-Sowing-Guide.md  Logpaddock_SILO_API_Reference.md  Makefile  analogue_method.md  commands.rst  conf.py  data_contracts.md  data_storage.md  decision_silo_variable_expansion.md  index.rst  make.bat  national_sa2_rainfall_expansion.md  phase2_branch_status.md  rainfall_handoff_v1_contract.md  repo_inventory.md  sa2_join_key_investigation_notes.md  sa2_rainfall_features_plan.md  silo_api_usage_guide.md  sowing_evidence_integration_notes.md  sowing_windows_transcription_notes.md  wa_sowing_agronomic_review_findings.md
notebooks/: 1.0-rjb-exploration-aws-boto3.ipynb  1.1-rjb-SILO-Gridded_Data.ipynb  1.2-rjb-SILO-GriddedData-Download.ipynb  2.0-rjb-SILO-weatherdata-downloader.ipynb  2.1-rjb-silo-bom-rainfall-comparison.ipynb  4.0-rjb-download-s3-bucket.ipynb  5.0-rjb-rainfall-percentiles.ipynb  6.0-rjb-bom-station-metadata.ipynb  7.0-rjb-bom-monthly-rainfall-totals.ipynb  7.1-rjb-concat-bom-monthly-rain-silo-database.ipynb  tmp.nc
reports/: 2025-26_season_summary.md  WA_Wheatbelt_Executive_Summary_2025-09-08.md
scripts/: _migrate_bulk_to_hdd.sh  backfill_historical.py  build_2026_sa2_monthly_from_daily.py  build_clum_cropfrac.py  build_crop_context.py  build_cumulative_window_review.py  build_sa2_obs_freshness_report.py  build_sa2_rainfall_deciles.py  build_sa2_rainfall_features.py  build_sd_monthly_rainfall_review.py  build_sd_sa2_breakdown.py  build_station_regions.py  (+23 more)
(+136 files in other folders)
