[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheatbelt_rainfall_analyser"
version = "0.1.0"
description = "To gather historical and ongoing rainfall data to use in the prediction of Australian wheat crop production."
authors = [{ name = "Rodney J Baker" }]
license = { text = "MIT" }
dependencies = [
    "numpy<2.0.0",
    "pandas",
    "matplotlib",
    "click",
    "requests",
    "pyyaml",
    "Sphinx",
    "coverage",
    "awscli",
    "flake8",
    "python-dotenv>=0.5.1",
    "boto3"
]

[tool.setuptools]
packages = ["src"]