[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheatbelt_rainfall_analyser"
version = "0.1.0"
description = "To gather historical and ongoing rainfall data to use in the prediction of Australian wheat crop production."
authors = [{ name = "Rodney J Baker" }]
license = { text = "MIT" }
dependencies = [
    "numpy<2.0.0",
    "pandas",
    "click",
    "requests",
    "pyyaml",
    "python-dotenv>=0.5.1",
    "python-dateutil>=2.8.0",
    "duckdb>=0.8.0",
    "xarray",
    "netCDF4",
    "matplotlib",
    "geopandas"
]

[tool.setuptools]
packages = ["src"]